data/derived/fa15/progs/unify/prog2671.ml.out
Characters 68-73:
  | Sine e' -> sin (3.142 * e')
                    ^^^^^
Error: This expression has type float but an expression was expected of type
         int
